--- a/src/assets/custom.scss
+++ b/src/assets/custom.scss
@@ -1,5 +1,6 @@
-$color: #005300;
-$color_more: #00a868;
+$color: #2d80df;
+$color: #4585ce;
+$color_more: #1642d3;
 
 .spacer-10 {
     height: 10px;
@@ -14,9 +15,18 @@ $color_more: #00a868;
     height: 60px;
 }
 
+#root {
+    background: linear-gradient(
+        180deg,
+        rgb(47, 86, 212) 0%,
+        rgba(41, 109, 185, 1) 5%,
+        rgba(255, 255, 255, 0) 100%
+    );
+}
+
 #overlay__screen {
     z-index: 99;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     left: 0;
     top: 0;
@@ -26,8 +36,10 @@ $color_more: #00a868;
 }
 
 .navbar {
-    background-color: #ddd;
+    z-index: 99;
+    background-color: transparent;
     padding: 12px 0px;
+    transition: 0.2s ease-in;
     > div {
         display: flex;
         align-items: center;
@@ -41,20 +53,24 @@ $color_more: #00a868;
                 display: flex;
                 gap: 20px;
                 li {
-                    color: black;
+                    letter-spacing: 3px;
+                    color: rgba(255, 255, 255, 0.7);
                     position: relative;
-                    :hover {
-                        color: red;
-                    }
                     ::after {
                         content: "";
                         position: absolute;
                         bottom: -3px;
                         left: 0;
-                        border-bottom: 1px solid black;
+                        border-bottom: 1px solid #ddd;
                         border-radius: 30px;
+                        width: 0%;
+                        transition: 0.3s ease-in-out;
+                    }
+                }
+                li:hover {
+                    color: rgba(255, 255, 255, 1);
+                    ::after {
                         width: 100%;
-                        transition: 0.4s ease-in-out;
                     }
                 }
             }
@@ -76,6 +92,13 @@ $color_more: #00a868;
     }
 }
 
+.sticky {
+    position: fixed;
+    width: 100%;
+    background-color: $color;
+    box-shadow: 0px 0px 15px black;
+}
+
 .sidebar {
     width: 260px;
     padding: 20px;
@@ -86,7 +109,7 @@ $color_more: #00a868;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    background: grey;
+    background: white;
     transition: 0.2s ease-in-out;
     > div {
         justify-content: center;
@@ -101,20 +124,68 @@ $color_more: #00a868;
             font-size: 18px;
             font-weight: bolder;
             font-family: sans-serif;
+            position: relative;
+            color: var(--bs-gray-600);
+            ::after {
+                content: "";
+                position: absolute;
+                bottom: 0px;
+                left: 0;
+                border-bottom: 1px solid black;
+                border-radius: 30px;
+                width: 0%;
+                transition: 0.3s ease-in-out;
+            }
+        }
+        div:hover {
+            color: black;
+            ::after {
+                width: 100%;
+            }
         }
     }
 }
 
 .cards {
+    div:nth-child(1) {
+        span {
+            background: radial-gradient(circle at center, #44fd73, #87faa4);
+        }
+    }
+    div:nth-child(2) {
+        span {
+            background: radial-gradient(circle at center, #00f3d3, #61e6d4);
+        }
+    }
+    div:nth-child(3) {
+        span {
+            background: radial-gradient(circle at center, #ff2a2a, #ff6f6f);
+        }
+    }
+    div:nth-child(4) {
+        span {
+            background: radial-gradient(circle at center, #f8f525, #efff96);
+        }
+    }
     div {
         padding: 15px;
         span {
-            background-color: #ccc;
+            cursor: pointer;
             display: flex;
-            padding: 20px;
+            padding: 10px;
             flex-direction: column;
             justify-content: center;
             border-radius: 20px;
+            color: $color_more;
+            transition: 0.3s all;
+            box-shadow: 0px 0px 30px -5px rgb(255, 255, 255);
+            h5 {
+                color: black;
+            }
+        }
+        span:hover {
+            background: linear-gradient(to top, $color, $color_more);
+            color: white;
         }
     }
 }
@@ -123,9 +194,31 @@ $color_more: #00a868;
     svg {
         padding-right: 20px;
     }
+    tspan {
+        color: white !important;
+    }
     @media screen and (max-width: 576px) {
         svg {
             padding-right: 0;
+        }
+    }
+}
+
+.games {
+    div {
+        border-radius: 10px;
+        background-color: $color;
+    }
+    span {
+        color: black;
+    }
+    .table__image {
+        padding: 10px;
+        width: 120px;
+        height: 80px;
+        img {
+            width: 100%;
+            height: 100%;
         }
     }
 }
