--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1170,7 +1170,6 @@ textarea.disabled {
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
 }
 .justify-between {
     justify-content: space-between;
@@ -1327,7 +1326,7 @@ hr {
 .spinner {
     width: 30px;
     height: 30px;
-    border: 3px solid white;
+    border: 3px solid var(--bs-blue);
     background-color: transparent;
     border-radius: 50%;
     border-left: none;
