--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -81,7 +81,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     font-size: var(--font-size-p);
     color: var(--font-dark-color);
-    background-color: #fff;
+    background: linear-gradient(90deg, #441569, #160a4d);
 }
 
 .container {
