--- a/src/assets/custom.scss
+++ b/src/assets/custom.scss
@@ -1,6 +1,5 @@
-$color: #2d80df;
-$color: #4585ce;
-$color_more: #1642d3;
+$color: #461b92;
+$color_more: #1e0a45;
 
 .spacer-10 {
     height: 10px;
@@ -13,15 +12,6 @@ $color_more: #1642d3;
 }
 .spacer-double {
     height: 60px;
-}
-
-#root {
-    background: linear-gradient(
-        180deg,
-        rgb(47, 86, 212) 0%,
-        rgba(41, 109, 185, 1) 5%,
-        rgba(255, 255, 255, 0) 100%
-    );
 }
 
 #overlay__screen {
@@ -43,9 +33,16 @@ $color_more: #1642d3;
     > div {
         display: flex;
         align-items: center;
-        img {
-            width: 48px;
-            cursor: pointer;
+        justify-content: space-between;
+        > div {
+            display: flex;
+            align-items: center;
+            color: white;
+            gap: 10px;
+            img {
+                width: 48px;
+                cursor: pointer;
+            }
         }
         .header__item {
             ul {
@@ -149,22 +146,22 @@ $color_more: #1642d3;
 .cards {
     div:nth-child(1) {
         span {
-            background: radial-gradient(circle at center, #44fd73, #87faa4);
+            background: linear-gradient(to bottom, #dd5459, transparent);
         }
     }
     div:nth-child(2) {
         span {
-            background: radial-gradient(circle at center, #00f3d3, #61e6d4);
+            background: linear-gradient(to bottom, #57bb29, transparent);
         }
     }
     div:nth-child(3) {
         span {
-            background: radial-gradient(circle at center, #ff2a2a, #ff6f6f);
+            background: linear-gradient(to bottom, #6554dd, transparent);
         }
     }
     div:nth-child(4) {
         span {
-            background: radial-gradient(circle at center, #f8f525, #efff96);
+            background: linear-gradient(to bottom, #62279f, transparent);
         }
     }
     div {
@@ -175,37 +172,24 @@ $color_more: #1642d3;
             flex-direction: column;
             justify-content: center;
             border-radius: 20px;
-            color: $color_more;
+            color: white;
             transition: 0.3s all;
-            box-shadow: 0px 0px 30px -5px rgb(255, 255, 255);
             h5 {
-                color: black;
+                color: #ddd;
             }
         }
     }
 }
 
-.recharts-wrapper {
-    svg {
-        padding-right: 20px;
-    }
-    tspan {
-        color: white !important;
-    }
-    @media screen and (max-width: 576px) {
-        svg {
-            padding-right: 0;
-        }
-    }
+.chart {
+    background-color: #1e0b43;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 .games {
     div {
         border-radius: 10px;
-        background-color: $color;
-    }
-    span {
-        color: black;
     }
     .table__image {
         padding: 10px;
@@ -214,6 +198,22 @@ $color_more: #1642d3;
         img {
             width: 100%;
             height: 100%;
+        }
+    }
+    :nth-child(1) {
+        div {
+            background-color: $color;
+            color: white;
+        }
+    }
+    :nth-child(2) {
+        background-color: transparent;
+        nav {
+            color: white;
+            background-color: transparent;
+            select {
+                outline: none;
+            }
         }
     }
     > div {
@@ -227,6 +227,33 @@ $color_more: #1642d3;
                     }
                 }
             }
+        }
+    }
+}
+
+.bg__footer {
+    background-color: #240949;
+    .footer {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: white;
+        div {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            img {
+                width: 50px;
+            }
+        }
+
+        @media screen and (max-width: 500px) {
+            flex-direction: column;
+            justify-content: center;
+            gap: 20px;
         }
     }
 }
